[tool.poetry]
name = "guc-tuning"
version = "0.0.1"
description = "Postgres GUC tuning using Bayesian optimisation with Gaussian processes"
authors = ["Alexander Bayandin <alexander@neon.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-optimize = "0.9.0"
requests = "^2.28.1"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
